--- a/gobotany/simplekey/templates/simplekey/simple.html
+++ b/gobotany/simplekey/templates/simplekey/simple.html
@@ -1,9 +1,9 @@
-{% extends "simplekey/_new_base.html" %}
+{% extends "gobotany/_page_full_sidebar.html" %}
 {% load simplekey_extras %}
 
 {% block title %}{{ key|title }} Key for Plant Identification{% endblock %}
 
-{% block body_attributes %}id="plant-id" class="app {{ key|title|lower }}"{% endblock %}
+{% block body_attributes %}class="skey groups-subgroups {{ key|title|lower }}"{% endblock %}
 
 {% block js_top %}
     {# TODO: eventually move elsewhere #}
@@ -14,18 +14,11 @@
     require(['simplekey/simple']);
 {% endblock %}
 
-{% block body_content %}
-    {% include "simplekey/_header.html" %}
-
-    <div class="content">
-        <div class="container">
-            <div id="main">
-                <h2>{{ key|title }} Key</h2>
+{% block main_content %}
+                <h1>{{ key|title }} Key</h1>
 
                 <p class="question">{{ groups_list_page.main_heading }}</p>
                 <p class="tip">Please go through the groups in order.</p>
-
-                <div class="clearit"></div>
 
                 {% for pilegroup, pilegroup_images, pilegroup_url in pilegroups %}
                     <div class="list-item{% if forloop.last %} last{% endif %}">
@@ -53,7 +46,8 @@
                             </div>
                         </div>
                         <div class="details">
-                            <h3>{{ pilegroup.friendly_title|lower|capfirst }} <span>{{ pilegroup.friendly_name|capfirst }}</span></h3>
+                            <h2>{{ pilegroup.friendly_title|lower|capfirst }}</h2>
+                            <p>{{ pilegroup.friendly_name|capfirst }}</p>
                             <p class="key-char">
                                 <span class="section-title">Key Characteristics</span>
                                 {{ pilegroup.key_characteristics|removetags:"div"|safe|capfirst }}
@@ -71,18 +65,10 @@
                             {% endif %}
                             <a class="plant-in-group" href="{{ pilegroup_url }}">My plant is in this group</a>
                         </div>
-                        <div class="clearit"></div>
                     </div>
                 {% endfor %}
+{% endblock %}
 
-            </div>
-
-            <div id="sidebar">
-                {% include "simplekey/_sidebar_items.html" %}
-            </div>
-
-            <div class="clearit"></div>
-
-        </div>
-    </div>
+{% block sidebar_content %}
+    {% include "gobotany/_sidebar_items.html" %}
 {% endblock %}
