Fix some appearance bugs on the Level 2 page following its move. (#291)

--- a/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
+++ b/gobotany/simplekey/templates/simplekey/_plant_not_in_subgroup.html
@@ -1,11 +1,13 @@
                     <div class="not-my-plant">
-                        <h6>My plant isn't in
+                        <p>My plant isn't in
                             {% if piles|length > 1 %}
                                 these subgroups.
                             {% else %}
                                 this subgroup.
                             {% endif %}
-                        </h6>
-                        <a class="back-level"
-                            href="{% url level1 key %}">&laquo; Take me back a level.</a>
+                        </p>
+                        <p>
+                            <a class="back-level"
+                                href="{% url level1 key %}">&laquo; Take me back a level.</a>
+                        </p>
                     </div>
