--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -745,7 +745,20 @@ body.plantshare.sighting form fieldset legend { display: block; text-indent: -90
 body.plantshare.sighting form .map { float: right; }
 body.plantshare.sighting form .post-sighting-btn { background: transparent url(/static/images/layout/plantshare2-btn.png) no-repeat -372px -634px; border: 0 none; display: block; width: 157px; height: 32px; text-indent: -9999px; }
 body.plantshare.sighting form .post-sighting-btn.inactive { background-position: -372px -599px; }
+body.plantshare#profile div.section-container { position: relative; }
+body.plantshare#profile div.section-container .save-btn { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -272px -231px; width: 99px !important; height: 32px; font-size: 0; -moz-box-shadow: 0 !important; border: 0 none !important; display: block; text-indent: -9999px; }
+body.plantshare#profile div.section-container .image-modal { background-color: white; border: 5px solid #ACAC90; display: none; padding: 15px; position: absolute; width: 400px; height: 120px; top: 35px; left: 20px; z-index: 10; }
+body.plantshare#profile div.section-container .image-modal img { float: left; margin: 0 20px 10px 0; }
+body.plantshare#profile div.section-container .image-modal a.close { background: transparent url(/static/images/icons/close.png) no-repeat; display: block; height: 16px; position: absolute; top: 15px; right: 15px; width: 16px; text-indent: -9999px; }
+body.plantshare#profile div.section-container .image-modal h4 { margin: 0 0 15px; font-size: 18px; }
+body.plantshare#profile div.section-container .image-modal form { float: right; margin: 15px 0; width: 290px; }
+body.plantshare#profile div.section-container .image-modal input { border: 0 none !important; box-shadow: inset 0 0 0 white !important; }
+body.plantshare#profile div.section-container .image-modal input#id_image { clear: both; display: block; margin: 0 0 10px; }
 body.plantshare#profile .info-section, body.plantshare#profile .location-section { min-height: 140px; position: relative; }
+body.plantshare#profile .info-section .field-controls, body.plantshare#profile .location-section .field-controls { padding: 5px 0 0; }
+body.plantshare#profile .info-section .field-controls input, body.plantshare#profile .location-section .field-controls input { float: left; }
+body.plantshare#profile .info-section .field-controls input, body.plantshare#profile .info-section .field-controls a, body.plantshare#profile .location-section .field-controls input, body.plantshare#profile .location-section .field-controls a { display: block; margin-right: 20px; vertical-align: middle; }
+body.plantshare#profile .info-section .field-controls::after, body.plantshare#profile .location-section .field-controls::after { display: block; content: " "; clear: both; }
 body.plantshare#profile .info-section .info.box, body.plantshare#profile .location-section .info.box { min-height: 160px; padding: 0 0 5px 0; }
 body.plantshare#profile .info-section .info.box .avatar, body.plantshare#profile .location-section .info.box .avatar { margin-right: 15px; padding: 0; float: left; width: 170px; }
 body.plantshare#profile .info-section .info.box .avatar img, body.plantshare#profile .location-section .info.box .avatar img { border: 0; }
@@ -759,14 +772,6 @@ body.plantshare#profile .info-section .info.box table .display .group-list, body
 body.plantshare#profile .info-section .info.box table .display .edit-link, body.plantshare#profile .location-section .info.box table .display .edit-link { float: right; }
 body.plantshare#profile .info-section .info.box table .display ul, body.plantshare#profile .location-section .info.box table .display ul { list-style: none; }
 body.plantshare#profile .info-section .info.box table .edit, body.plantshare#profile .location-section .info.box table .edit { display: none; }
-body.plantshare#profile .info-section .image-modal, body.plantshare#profile .location-section .image-modal { background-color: white; border: 5px solid #ACAC90; display: none; padding: 15px; position: absolute; width: 400px; height: 120px; top: 35px; left: 20px; z-index: 10; }
-body.plantshare#profile .info-section .image-modal img, body.plantshare#profile .location-section .image-modal img { float: left; margin: 0 20px 10px 0; }
-body.plantshare#profile .info-section .image-modal a.close, body.plantshare#profile .location-section .image-modal a.close { background: transparent url(/static/images/icons/close.png) no-repeat; display: block; height: 16px; position: absolute; top: 15px; right: 15px; width: 16px; text-indent: -9999px; }
-body.plantshare#profile .info-section .image-modal h4, body.plantshare#profile .location-section .image-modal h4 { margin: 0 0 15px; font-size: 18px; }
-body.plantshare#profile .info-section .image-modal form, body.plantshare#profile .location-section .image-modal form { float: right; margin: 15px 0; width: 290px; }
-body.plantshare#profile .info-section .image-modal input, body.plantshare#profile .location-section .image-modal input { border: 0 none !important; box-shadow: inset 0 0 0 white !important; }
-body.plantshare#profile .info-section .image-modal input#id_image, body.plantshare#profile .location-section .image-modal input#id_image { clear: both; display: block; margin: 0 0 10px; }
-body.plantshare#profile .info-section .image-modal .save-btn, body.plantshare#profile .location-section .image-modal .save-btn { background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat -272px -231px; width: 99px !important; height: 32px; font-size: 0; -moz-box-shadow: 0 !important; border: 0 none !important; display: block; text-indent: -9999px; }
 body.plantshare#profile .info-section { margin: 20px 0; }
 body.plantshare#profile .info-section .info.box { margin: 20px 0; padding: 10px 15px 20px; }
 body.plantshare#profile .info-section .info.box table { margin: 0; }
