--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -574,6 +574,9 @@ footer {
     font-size: 14px;
     line-height: 160%;
     margin: 0 0 14px;
+    p {
+        margin: 0;
+    }
     span {
         color: #000;
     }
